# py-cli-config

./: .envrc  .gitignore  README.rst
cli_config/: README.md  pyproject.toml
